--- a/pipeline/scripts/analyses/domain_protein_analysis/config.json
+++ b/pipeline/scripts/analyses/domain_protein_analysis/config.json
@@ -1,6 +1,9 @@
 { 
   "mode": "guix",
-  "domain_hmm_dir": "domain_example",
+  "domain_hmm_dir": "domain_example/",
+  "global_results_dir": "domain_protein_analysis/",
+  "genome_results_dir": "domain_protein_analysis/",
+  "domains" : ["SET","KRAB"],
   "assembly_list": [
 "GCF_029281585.2" , 
 "GCF_029289425.2" , 
