Now the full hmm search+paralog check process is working on a single domain

--- a/pipeline/scripts/analyses/domain_protein_analysis/config.json
+++ b/pipeline/scripts/analyses/domain_protein_analysis/config.json
@@ -5,7 +5,7 @@
   "reference" : "PRDM9",
   "global_results_dir": "domain_protein_analysis/",
   "genome_results_dir": "domain_protein_analysis/",
-  "domains" : ["SET","KRAB"],
+   "domains" : ["SET"],
   "assembly_list": [
 "GCF_029281585.2" , 
 "GCF_029289425.2" , 
