--- a/pipeline/scripts/analyses/domain_protein_analysis/config.json
+++ b/pipeline/scripts/analyses/domain_protein_analysis/config.json
@@ -4,7 +4,8 @@
   "reference" : "PRDM9",
   "global_results_dir": "domain_example_analysis/",
   "genome_results_dir": "domain_example_analysis/",
-   "domains" : ["SET"],
+   "domains" : {"SET":"SET_PRDM9_domain_alignment"},
+   "domains_simple" : ["KRAB"],   
   "assembly_list": [
 "GCF_029281585.2" , 
 "GCF_029289425.2" , 
