--- a/pipeline/scripts/analyses/domain_protein_analysis/config.json
+++ b/pipeline/scripts/analyses/domain_protein_analysis/config.json
@@ -1,9 +1,14 @@
 { 
   "mode": "",
   "analyse_dir_name": "domain_example/",
-  "domain_references" : {"SET":"Domain_SET_ReferenceAlignment2024","KRAB":"Domain_KRAB_ReferenceAlignment2024"},
-  "domains" :  ["SET","KRAB"],    
-  "domains_simple" : [],   
+  "domain_references" : {
+"SET":"Domain_SET_ReferenceAlignment2024",
+"KRAB":"Domain_KRAB_ReferenceAlignment2024",
+"SSXRD":"Domain_SSXRD_ReferenceAlignment2024",
+"ZF":"Domain_ZF_unit_ReferenceAlignment2024",
+},
+  "domains" :  ["SET"],    
+  "domains_simple" : ["KRAB","ZF","SSXRD"],   
   "assembly_list": [
 "GCF_029281585.2" , 
 "GCF_029289425.2" , 
